--- a/templates/films/edit_comment.html.twig
+++ b/templates/films/edit_comment.html.twig
@@ -1,23 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier le commentaire{% endblock %}
+{% block title %}Modifier le commentaire
+{% endblock %}
+
+{% block stylesheets %}
+	{{ parent() }}
+	<link rel="stylesheet" href="{{ asset('css/custom.css') }}">
+{% endblock %}
 
 {% block body %}
-<div class="container">
-    <h1>Modifier votre commentaire</h1>
+	<div class="container custom-container">
+		<h1 class="custom-heading">Modifier votre commentaire</h1>
 
-    {{ form_start(commentForm) }}
-        <div class="form-group">
-            {{ form_label(commentForm.commentaire) }}
-            {{ form_widget(commentForm.commentaire, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(commentForm.commentaire) }}
-            
-        </div>
+		{{ form_start(commentForm) }}
+		<div class="form-group custom-form-group">
+			{{ form_label(commentForm.commentaire) }}
+			{{ form_widget(commentForm.commentaire, {'attr': {'class': 'form-control custom-form-control'}}) }}
+			{{ form_errors(commentForm.commentaire) }}
+		</div>
 
-        <div class="form-group">
-            {{ form_rest(commentForm) }}
-        </div>
-    <button type="submit" class="btn btn-primary">Noter et commenter</button>
-
-</div>
+		<div class="form-group custom-form-group">
+			{{ form_rest(commentForm) }}
+		</div>
+		<button type="submit" class="btn btn-primary custom-btn">Noter et commenter</button>
+		{{ form_end(commentForm) }}
+	</div>
 {% endblock %}
