--- a/templates/films/genre_show.html.twig
+++ b/templates/films/genre_show.html.twig
@@ -1,16 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Genre: {{ genre.name }}{% endblock %}
-
 {% block body %}
-    <h2>Films du genre: {{ genre.name }}</h2>
-    <div class="films-list">
-        {% for film in films %}
-            <div class="film">
-                <h3>{{ film.title }}</h3>
-                <!-- Plus d'informations sur le film -->
-                <a href="{{ path('film_detail', {'id': film.id}) }}">Voir les détails</a>
-            </div>
-        {% endfor %}
+    <div class="container mt-5">
+        <!-- Ajout d'un espace entre le header et les films -->
+        <div class="row">
+            {% for film in films %}
+                <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
+                    <div class="card h-100">
+                        {% set firstImage = film.getImages()|first %}
+                        <img src="{{ firstImage ? asset('assets/img/' ~ firstImage.getPhoto()) : asset('assets/img/default/image.jpg') }}" class="d-block w-100 film-image" alt="Image de {{ film.name }}">
+                        <div class="card-body">
+                            <h5 class="card-title film-title">{{ film.name }}</h5>
+                            <p class="card-genre">
+                                {% for genre in film.genres %}
+                                    <span class="badge badge-secondary">{{ genre.name }}</span>
+                                {% endfor %}
+                            </p>
+                            <p class="film-description">{{ film.description|striptags|slice(0, 200) ~ '...' }}</p>
+                            {% if app.user %}
+                                {% set isFavorite = film.favories|filter(favori => favori.getUsers == app.user)|length > 0 %}
+                                <a href="{{ path('film_add_to_favorites', {'id': film.id}) }}" class="btn btn-{{ isFavorite ? 'secondary' : 'primary' }}">
+                                    {{ isFavorite ? 'Retirer des favoris' : 'Ajouter aux favoris' }}
+                                </a>
+                            {% endif %}
+                        </div>
+                        <div class="card-footer">
+                            <a href="{{ path('app_film_detail', {'id': film.id}) }}" class="btn btn-primary">Voir plus</a>
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                <p class="text-center">Aucun film n'a été trouvé dans ce genre.</p>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
