--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -1,15 +1,66 @@
-.test {
+/* CSS pour la page d'inscription */
+.signup {
+    padding-top: 130px;
+    padding-bottom: 150px;
+}
+
+.signup .login__form {
     position: relative;
+    padding-left: 20px; /* Ajustement de la marge gauche */
+    width: 400px; /* Largeur du formulaire */
+    margin: 0 auto; /* Centrage horizontal */
 }
 
-.test .test2{
-    padding-right: 40px;  /* Ajuste cette valeur pour donner plus d'espace si l'icône est trop proche du texte entré dans le champ */
+.signup .login__form h3 {
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Oswald", sans-serif;
+    margin-bottom: 20px; /* Espacement modifié */
 }
 
-.test span {
-    position: absolute;
-    top: 50%;
-    right: 15px;  /* Ajuste cette valeur pour déplacer l'icône horizontalement */
-    transform: translateY(-50%);
-    pointer-events: none;
+.signup .login__form form .input__item {
+    position: relative;
+    width: 100%; /* Ajusté pour occuper toute la largeur */
+    margin-bottom: 20px;
+}
+
+.signup .login__form form .input__item input {
+    height: 50px;
+    width: 100%;
+    max-width: 400px; /* Largeur maximale des champs de saisie */
+    font-size: 15px;
+    color: #b7b7b7;
+    background: #ffffff;
+    border: none;
+    padding-left: 20px; /* Ajusté pour aligner avec le reste du formulaire */
+}
+
+.signup .login__form .form-error-message {
+    color: red; /* Couleur du message d'erreur */
+}
+
+.signup .login__form .terms-label {
+    color: #ffffff; /* Couleur du texte "Accepter les conditions d'utilisation" */
+}
+
+.signup .login__form form .btn {
+    background-color: #e53637; /* Couleur de fond du bouton */
+    color: #ffffff; /* Couleur du texte du bouton */
+    border: none;
+    transition: background-color 0.3s ease;
+}
+
+.signup .login__form form .btn:hover {
+    background-color: #000000; /* Couleur de fond du bouton au survol */
+}
+
+.signup .login__form .button__item {
+    flex: 1;
+    margin-right: 50px; /* Espace entre les boutons */
+    text-align: right; /* Alignement du contenu à droite */
+}
+
+.signup .login__form h5 {
+    color: #ffffff; /* Couleur du texte "Vous avez déjà un compte ?" */
+    margin-top: 20px; /* Espacement modifié */
 }
