--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,30 +1,27 @@
- <!-- Footer Section Begin -->
-    <footer class="footer">
-        <div class="page-up">
-            <a href="#" id="scrollToTopButton"><span class="arrow_carrot-up"></span></a>
+<!-- Footer Section Begin -->
+<footer class="footer">
+    <div class="page-up">
+        <a href="#" id="scrollToTopButton"><span class="arrow_carrot-up"></span></a>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="footer__nav">
+                    <ul>
+                        <li class="active"><a href="{{ path('app_homepage') }}" style="color: white;">Accueil</a></li>
+                        {% if app.user %}
+                            <li><a href="{{ path('app_profile') }}" style="color: white;">{{ app.user.username }}</a></li>
+                        {% else %}
+                            <li><a href="{{ path('app_login') }}" style="color: white;">Connexion</a></li>
+                            <li><a href="{{ path('app_register') }}" style="color: white;">Inscription</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <p style="color: white;">Créé en 2024 par Lucas</p>
+            </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="footer__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="footer__nav">
-                        <ul>
-                            <li class="active"><a href="./index.html">Accueil</a></li>
-                            <li><a href="./categories.html">Categories</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-
-                  </div>
-              </div>
-          </div>
-      </footer>
-      <!-- Footer Section End -->
+    </div>
+</footer>
+<!-- Footer Section End -->
