--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -366,6 +366,30 @@ ol {
     transition: all 0.3s ease;
 }
 
+/* Style de base pour les éléments du menu */
+.header__menu ul li a {
+    position: relative; /* Position relative pour positionner correctement les pseudo-éléments */
+    display: inline-block; /* Permet au lien de contenir correctement les pseudo-éléments */
+    padding-bottom: 5px; /* Espacement pour la barre */
+}
+
+/* Création de la barre sous l'élément du menu avec un pseudo-élément */
+.header__menu ul li a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 0%;
+    background-color: red; /* Couleur de la barre */
+    transition: width 0.4s ease; /* Animation de la barre */
+}
+
+/* Animation de la barre lors du survol */
+.header__menu ul li a:hover::after {
+    width: 100%; /* La barre s'étend sur toute la largeur de l'élément */
+}
+
 .header__menu ul li a:hover {
     color: #e53637;
 }
@@ -447,6 +471,8 @@ ol {
 	height: 325px;
 	position: relative;
 	border-radius: 5px;
+	transition: transform 0.5s ease, box-shadow 0.5s ease;
+
 }
 
 .product__item__pic .ep {
@@ -471,6 +497,10 @@ ol {
 	position: absolute;
 	left: 10px;
 	bottom: 10px;
+}
+.product__item__pic:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px 5px #e53637;
 }
 
 .product__item__pic .view {
