--- a/templates/films/detail.html.twig
+++ b/templates/films/detail.html.twig
@@ -1,138 +1,136 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-    {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('assets/css/film-details.css') }}">
+	{{ parent() }}
+	<link rel="stylesheet" href="{{ asset('assets/css/film-details.css') }}">
 {% endblock %}
 
 {% block title %}
-    Détail du film - {{ film.name }}
+	Détail du film -
+	{{ film.name }}
 {% endblock %}
 
 {% block body %}
-    <div class="film-container mt-5">
-        <div class="film-details">
-            <div class="d-flex justify-content-between align-items-center">
-                <h1 class="film-title">{{ film.name }}</h1>
-                {% if app.user %}
-                    {% set isFavorite = film.favories|filter(favori => favori.getUsers == app.user)|length > 0 %}
-                    <a href="{{ path('film_add_to_favorites', {'id': film.id}) }}" class="btn btn-{{ isFavorite ? 'secondary' : 'primary' }}">
-                        {{ isFavorite ? 'Retirer des favoris' : 'Ajouter aux favoris' }}
-                    </a>
-                {% endif %}
-            </div>
-            <p class="film-description">{{ film.description|raw }}</p>
-            <p class="film-duration">Durée: {{ film.duree }} minutes</p>
-            <p class="film-datesortie">Date de sortie: {{ film.dateSortie|date('d-m-Y') }}</p>
-            <div class="film-cast">
-                <div class="film-section">
-                    <h3>Acteurs</h3>
-                    <ul>
-                        {% for acteur in film.getActeurs %}
-                            <li>{{ acteur.getName }} {{ acteur.getNickname }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="film-section">
-                    <h3>Réalisateurs</h3>
-                    <ul>
-                        {% for realisateur in film.realisateurs %}
-                            <li>{{ realisateur.getName }} {{ realisateur.getNickname }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="film-section">
-                    <h3>Producteurs</h3>
-                    <ul>
-                        {% for producteur in film.getProducteurs %}
-                            <li>{{ producteur.getName }} {{ producteur.getNickname }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="film-section">
-                    <h3>Genres</h3>
-                    <ul>
-                        {% for genre in film.getGenres %}
-                            <li>{{ genre.getName }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="film-images">
-            <div id="filmImagesCarousel" class="carousel slide mt-4" data-ride="carousel">
-                <div class="carousel-inner">
-                    {% for image in film.images %}
-                        <div class="carousel-item {{ loop.first ? 'active' : '' }}">
-                            <img src="{{ asset('assets/img/' ~ image.getPhoto()) }}" class="d-block w-100 film-image" alt="{{ film.name }}">
-                        </div>
-                    {% endfor %}
-                </div>
-                <a class="carousel-control-prev" href="#filmImagesCarousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#filmImagesCarousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-    </div>
 
-    {% if app.user %}
-        {% set userHasCommented = false %}
-        {% for commentaire in commentaires %}
-            {% if commentaire.getUsers and commentaire.getUsers.getUsername == app.user.username %}
-                {% set userHasCommented = true %}
-            {% endif %}
-        {% endfor %}
+	<div class="film-container mt-5">
+		<div class="film-details">
+			<div class="d-flex justify-content-between align-items-center">
+				<h1 class="film-title">{{ film.name }}</h1>
+				{% if app.user %}
+					{% set isFavorite = film.favories|filter(favori => favori.getUsers == app.user)|length > 0 %}
+					<a href="{{ path('film_add_to_favorites', {'id': film.id}) }}" class="btn {{ isFavorite ? 'btn-secondary' : 'btn-primary' }}" style="{{ isFavorite ? 'background-color: #6c757d;' : '' }}">
+						{{ isFavorite ? 'Retirer des favoris' : 'Ajouter aux favoris' }}
+					</a>
 
-        {% if not userHasCommented %}
-            <div class="film-comments">
-            <h3 class="text-white">Donnez votre avis</h3>
-                {{ form_start(form, {'attr': {'class': 'form-commentaire'}}) }}
-                {{ form_widget(form) }}
-                <button type="submit" class="btn btn-primary">Noter et commenter</button>
-                {{ form_end(form, {'render_rest': false}) }}
-            </div>
-        {% endif %}
-    {% else %}
-        <p>Vous devez être <a href="{{ path('app_login') }}">connecté</a> pour commenter et noter un film.</p>
-    {% endif %}
 
-    <!-- Nouvelle section pour les commentaires avec le même design que ci-dessus -->
-    <div class="comments-list" style="background-color: transparent;">
-        <h3 style="color: white;">Commentaires</h3>
-        {% for commentaire in commentaires %}
-            <div class="comment" style="color: white;">
-                {% if commentaire.getUsers %}
-                    <strong>{{ commentaire.getUsers.getUsername }}</strong>
-                {% else %}
-                    <strong>Utilisateur inconnu</strong>
-                {% endif %}
-                <small style="float: right;">{{ commentaire.getDateCommentaire|date('d/m/Y H:i') }}</small>
-                <br>
-                {{ commentaire.getCommentaire }}
-                <br>
-                <small>Note : {{ commentaire.getRating }}/5</small>
-                <br>
-                {% if app.user and commentaire.getUsers and app.user == commentaire.getUsers %}
-                    <a href="{{ path('app_edit_comment', {'id': commentaire.id}) }}" class="btn btn-secondary btn-sm">Modifier</a>
-                {% endif %}
-            </div>
-        {% else %}
-            <p>Pas encore de commentaires.</p>
-        {% endfor %}
-    </div>
+				{% endif %}
+			</div>
+			<p class="film-description">{{ film.description|raw }}</p>
+			<p class="film-datesortie">Date de sortie:
+				{{ film.dateSortie|date('d-m-Y') }}</p>
+			<div class="film-cast">
+				<div class="film-section">
+					<h3>Acteurs</h3>
+					<ul>
+						{% for acteur in film.getActeurs|slice(0, 5) %}
+							<li>{{ acteur.getName }}
+								{{ acteur.getNickname }}</li>
+						{% endfor %}
+					</ul>
+				</div>
+				<div class="film-section">
+					<h3>Réalisateurs</h3>
+					<ul>
+						{% for realisateur in film.realisateurs %}
+							<li>{{ realisateur.getName }}
+								{{ realisateur.getNickname }}</li>
+						{% endfor %}
+					</ul>
+				</div>
+				{# Section Producteurs - affichée seulement s'il y a des producteurs #}
+				{% if film.getProducteurs|length > 0 %}
+					<div class="film-section">
+						<h3>Producteurs</h3>
+						<ul>
+							{% for producteur in film.getProducteurs %}
+								<li>{{ producteur.getName }}
+									{{ producteur.getNickname }}</li>
+							{% endfor %}
+						</ul>
+					</div>
+				{% endif %}
+				{# Section Genres - affichée seulement s'il y a des genres #}
+				{% if film.getGenres|length > 0 %}
+					<div class="film-section">
+						<h3>Genres</h3>
+						<ul>
+							{% for genre in film.getGenres %}
+								<li>{{ genre.getName }}</li>
+							{% endfor %}
+						</ul>
+					</div>
+				{% endif %}
+			</div>
+		</div>
+		<div class="film-images">
+			{% if film.images|length > 0 %}
+				<img src="{{ asset('assets/img/' ~ film.images|first.getPhoto()) }}" alt="{{ film.name }}" class="film-image">
+			{% endif %}
+		</div>
+	</div>
+</div></div><!-- Nouvelle section pour que l'utilisateur ajoute un commentaire -->{% if app.user %}
+{% set userHasCommented = false %}
+{% for commentaire in commentaires %}
+	{% if commentaire.getUsers and commentaire.getUsers.getUsername == app.user.username %}
+		{% set userHasCommented = true %}
+	{% endif %}
+{% endfor %}
 
-    <!-- Nouveau bloc pour la moyenne des notes, avec la même classe 'comments-list' pour le style -->
-    <div class="comments-list" style="background-color: transparent;">
-        <h3 style="color: white;">Note moyenne du film</h3>
-        {% if moyenne_notes is not null %}
-            <p style="color: white;">La note moyenne est : {{ moyenne_notes }}/5</p>
-        {% else %}
-            <p style="color: white;">Ce film n'a pas encore été noté.</p>
-        {% endif %}
-    </div>
-{% endblock %}
+{% if not userHasCommented %}
+	<div class="film-comments mt-5">
+		<h3 class="text-white mb-4">Partagez votre avis</h3>
+		{{ form_start(form, {'attr': {'class': 'form-commentaire'}}) }}
+		<div class="form-group">
+			{{ form_label(form.commentaire, 'Votre commentaire', {'label_attr': {'class': 'text-white'}}) }}
+			{{ form_widget(form.commentaire, {'attr': {'class': 'form-control', 'placeholder': 'Entrez votre commentaire ici'}}) }}
+		</div>
+		<div class="form-group">
+			{{ form_label(form.rating, 'Note', {'label_attr': {'class': 'text-white'}}) }}
+			{{ form_widget(form.rating, {'attr': {'class': 'form-control'}}) }}
+		</div>
+		<button type="submit" class="btn btn-primary">Envoyer</button>
+		{{ form_end(form) }}
+	</div>
+{% endif %}{% else %}
+<p class="mt-5">Vous devez être
+	<a href="{{ path('app_login') }}" class="text-white">connecté</a>
+	pour commenter et noter un film.</p>{% endif %}<!-- Nouvelle section pour les commentaires avec le même design que ci-dessus --><div class="comments-list" style="background-color: transparent;">
+<h3 style="color: white;">Commentaires</h3>
+{% for commentaire in commentaires %}
+	<div class="comment" style="color: white;">
+		{% if commentaire.getUsers %}
+			<strong>{{ commentaire.getUsers.getUsername }}</strong>
+		{% else %}
+			<strong>Utilisateur inconnu</strong>
+		{% endif %}
+		<small style="float: right;">{{ commentaire.getDateCommentaire|date('d/m/Y H:i') }}</small>
+		<br>
+		{{ commentaire.getCommentaire }}
+		<br>
+		<small>Note :
+			{{ commentaire.getRating }}/5</small>
+		<br>
+		{% if app.user and commentaire.getUsers and app.user == commentaire.getUsers %}
+			<a href="{{ path('app_edit_comment', {'id': commentaire.id}) }}" class="btn btn-secondary btn-sm">Modifier</a>
+		{% endif %}
+	</div>
+{% else %}
+	<p>Pas encore de commentaires.</p>
+{% endfor %}</div><!-- Nouveau bloc pour la moyenne des notes, avec la même classe 'comments-list' pour le style --><div class="comments-list" style="background-color: transparent;">
+<h3 style="color: white;">Note moyenne du film</h3>
+{% if moyenne_notes is not null %}
+	<p style="color: white;">La note moyenne est :
+		{{ moyenne_notes }}/5</p>
+{% else %}
+	<p style="color: white;">Ce film n'a pas encore été noté.</p>
+{% endif %}</div>{% endblock %}
