--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,59 +1,68 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier mon profil
-{% endblock %}
+{% block title %}Modifier mon profil{% endblock %}
 
 {% block body %}
 <div class="login">
-	<div class="login__form">
-		<h3>Modifier mon profil</h3>
+    <div class="login__form">
+        <h3>Modifier mon profil</h3>
 
-		{{ form_start(form) }}
+        {{ form_start(form) }}
 
-		<div class="input__item">
-			{{ form_label(form.email) }}
-			{{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.email) }}
-		</div>
-
-		<div class="input__item">
-			{{ form_label(form.username) }}
-                {{ form_widget(form.username, {'attr': {'class': 'form-control'}}) }}
-                {{ form_errors(form.username) }}
-            </div>
-
-            <div class="input__item">
-                {{ form_label(form.name) }}
-                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
-                {{ form_errors(form.name) }}
-            </div>
-
-            <div class="input__item">
-                {{ form_label(form.nickname) }}
-                {{ form_widget(form.nickname, {'attr': {'class': 'form-control'}}) }}
-                {{ form_errors(form.nickname) }}
-            </div>
-
-            <div class="input__item">
-                {{ form_label(form.password) }}
-                {{ form_widget(form.password, {'attr': {'class': 'form-control'}}) }}
-                {{ form_errors(form.password) }}
-            </div>
-
-        
-
-            <div class="input__item button__group">
-                <div class="button__item">
-                    {{ form_widget(form.submit, {'attr': {'class': 'btn btn-primary'}}) }}
+        {% if form.vars.submitted %}
+            {% if form.vars.errors %}
+                <div class="alert alert-danger">
+                    Des erreurs ont été trouvées dans le formulaire.
                 </div>
-                <div class="button__item">
-                    {% if app.user %}
-                        <a href="{{ path('app_logout') }}" class="btn btn-danger">Déconnexion</a>
-                    {% endif %}
-                </div>
-            </div>
+            {% endif %}
+        {% endif %}
 
-            {{ form_end(form) }}
+        <div class="input__item">
+            {{ form_label(form.email) }}
+            {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.email) }}
         </div>
+
+        <div class="input__item">
+            {{ form_label(form.username) }}
+            {{ form_widget(form.username, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.username) }}
+        </div>
+
+        <div class="input__item">
+            {{ form_label(form.name) }}
+            {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.name) }}
+        </div>
+
+        <div class="input__item">
+            {{ form_label(form.nickname) }}
+            {{ form_widget(form.nickname, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.nickname) }}
+        </div>
+
+        <div class="input__item"> 
+            {{ form_label(form.password) }}
+            {{ form_widget(form.password, {'attr': {'class': 'form-control', 'placeholder': 'Mot de passe actuel'}}) }}
+            {% if form.vars.submitted and form.password.vars.errors %}
+                <div class="alert alert-danger">
+                    {{ form_errors(form.password) }}
+                </div>
+            {% endif %}
+        </div>
+
+        <div class="input__item button__group">
+            <div class="button__item">
+                {{ form_widget(form.submit, {'attr': {'class': 'btn btn-primary'}}) }}
+            </div>
+            <div class="button__item">
+                {% if app.user %}
+                    <a href="{{ path('app_logout') }}" class="btn btn-danger">Déconnexion</a>
+                {% endif %}
+            </div>
+        </div>
+
+        {{ form_end(form) }}
     </div>
+</div>
 {% endblock %}
