--- a/public/assets/css/films.css
+++ b/public/assets/css/films.css
@@ -59,3 +59,17 @@
 .film-image:hover {
     box-shadow: 0 0 20px 5px #e53637; /* Lueur rouge */
 }
+@keyframes slideFromBottom {
+    from {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.slide-up {
+    animation: slideFromBottom 0.5s ease-out forwards;
+}
